[package]
name = "mech-notebook"
version = "0.2.0"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Gui notebook interface for the Mech programming language."
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/notebook"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.74"

[badges]
gitlab = { repository = "mech-lang/notebook", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies]
egui = "0.23.0"
egui_extras = { version = "0.23.0"}
eframe = { version = "0.23.0"}
serde = { version = "1", features = ["derive"] }

lazy_static = "1.4.0"
image = { version = "0.24.3", default-features = false, features = [
  "ico",
  "jpeg",
  "png",
] }
log = "0.4"
mech = {path = "../mech"}
tracing-subscriber = "0.3"
native-dialog = "0.6.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[workspace]

[build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
OriginalFilename = "MECH.EXE"
LegalCopyright = "Copyright © 2023"